Fix Event CSS Styles: increase margins to avoid overlap and use font-family and color variables

--- a/app/styles.css
+++ b/app/styles.css
@@ -93,14 +93,14 @@ body{
     flex-flow: column wrap;
     justify-content: space-evenly;
     align-content: center;
-    width: 100%;
+    width: 90%;
     height: 100%;
     padding: 10px ;
     background-color: var(--color1);
     border-radius: 20px;
-    box-shadow: 0 0 20px 1px var(--color2);
+    box-shadow: 0 0 1px 0px var(--color2);
     border: 1px solid var(--color2);
-    margin-bottom: 25px;
+    margin: 25px auto;
 }
 .barraUsuario{
     display: flex;
@@ -114,6 +114,8 @@ body{
 .tituloEvento{
     text-align: center;
     max-width: 70%;
+    font-family: var(--font-family);
+    color: var(--color2);
     margin: 0 auto;
 }
 .nombreUsuarioEvento{
